[tool.ruff]
target-version = "py39"
line-length = 88

[tool.pymarkdown]
plugins.MD013.enabled = false
plugins.MD024.enabled = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[project]
name = "litellm-exporter"
description = "Prometheus exporter for LiteLLM metrics"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Richard Steinbrueck", email = "richard.steinbrueck@googlemail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dynamic = ["version"]

dependencies = [
    "prometheus_client==0.17.1",
    "psycopg2==2.9.11",
    "backoff==2.2.1",
    "requests==2.32.3",
]

[project.urls]
Homepage = "https://github.com/steinbrueckri/exporter-litellm"
Repository = "https://github.com/steinbrueckri/exporter-litellm.git"
Issues = "https://github.com/steinbrueckri/exporter-litellm/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pymarkdownlnt>=0.9.22",
]