[tool.ruff]
target-version = "py39"
line-length = 88

[tool.pymarkdown]
plugins.MD013.enabled = false
plugins.MD024.enabled = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[project]
name = "litellm-exporter"
description = "Prometheus exporter for LiteLLM metrics"
requires-python = ">=3.9"

authors = [
    { name = "Richard Steinbrueck", email = "richard.steinbrueck@googlemail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dynamic = ["version"]

dependencies = [
    "prometheus_client==0.17.1",
    "psycopg2==2.9.11",
    "backoff==2.2.1",
    "requests==2.32.3",
]

[project.urls]
Homepage = "https://github.com/steinbrueckri/exporter-litellm"
Repository = "https://github.com/steinbrueckri/exporter-litellm.git"
Issues = "https://github.com/steinbrueckri/exporter-litellm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/litellm_exporter/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_exporter"]

[tool.bumpversion]
current_version = "1.2.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "src/litellm_exporter/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pymarkdownlnt>=0.9.22",
    "docker>=6.0.0",
    "bump-my-version",
    "pgcli>=4.3.0",
]
